sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: ')' expected but 'else' found.
	else i +=1
        ^